university controller file updated for swagger
