# internal/controller/university_controller.go
@@ -20,6 +20,13 @@ func NewUniversityController(us interfaces.IUniversityService) *universityContro
 	}
 }
 
+// GetUniversities           godoc
+// @Summary		Get universities array
+// @Description	Responds with the list of all universities as JSON.
+// @Tags			universities
+// @Produce		json
+// @Success		200	{object}	model.University
+// @Router			/universities [get]
 func (us *universityController) GetAllUniversities(context *gin.Context) {
 	universities, err := us.service.GetAll()
 	if err != nil {
@@ -29,6 +36,17 @@ func (us *universityController) GetAllUniversities(context *gin.Context) {
 	context.Header("Content-Type", "application/json")
 	context.IndentedJSON(http.StatusOK, universities)
 }
+
+// GetUniversity          godoc
+// @Summary		Get single university  by id
+// @Description	Returns the university  whose id value matches the id.
+// @Tags			universities
+// @Produce		json
+// @Param			id path	string true "search university  by id"
+// @Success		200		{object}	model.University
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/universities/{id} [get]
 func (us *universityController) GetUniversityById(context *gin.Context) {
 	str_id := context.Param("id")
 	university, err := us.service.GetById(str_id)
@@ -46,6 +64,17 @@ func (us *universityController) GetUniversityById(context *gin.Context) {
 	context.Header("Content-Type", "application/json")
 	context.IndentedJSON(http.StatusOK, university)
 }
+
+// CreateUniversity           godoc
+// @Summary		Add a new university
+// @Description	Takes a university  JSON and store in DB. Return saved JSON.
+// @Tags			universities
+// @Produce		json
+// @Param			university  body	model.University 	true "Ability JSON"
+// @Success		200		{object}	model.University
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/universities  [post]
 func (us *universityController) CreateUniversity(context *gin.Context) {
 
 	var university model.University
@@ -68,6 +97,17 @@ func (us *universityController) CreateUniversity(context *gin.Context) {
 	}
 	context.IndentedJSON(http.StatusCreated, gin.H{"message": "University has been created"})
 }
+
+// EditUniversity           godoc
+// @Summary		Edit an university
+// @Description	Takes a university JSON and edit an in DB. Return saved JSON.
+// @Tags			universities
+// @Produce		json
+// @Param			university body	model.University	true "University JSON"
+// @Success		200		{object}	model.University
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/universities [put]
 func (us *universityController) EditUniversity(context *gin.Context) {
 	var university model.University
 	err := context.ShouldBindJSON(&university)
@@ -90,6 +130,17 @@ func (us *universityController) EditUniversity(context *gin.Context) {
 
 	context.IndentedJSON(http.StatusCreated, gin.H{"message": "University has been edited", "university_id": university.ID})
 }
+
+// DeleteUniversity         godoc
+// @Summary		Delete an university
+// @Description	Remove an university from DB by id.
+// @Tags			universities
+// @Produce		json
+// @Param			id path	string true "delete university by id"
+// @Success		200		{object}	model.University
+// @Failure 	400     error message
+// @Failure 	406     error message
+// @Router			/universities/{id} [delete]
 func (us *universityController) DeleteUniversity(context *gin.Context) {
 	str_id := context.Param("id")
 	err := us.service.Delete(str_id)
